--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "axios": "^0.14.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
+    "redux": "^3.6.0",
     "redux-form": "^6.0.5",
-    "redux-promise": "^0.5.3"
+    "redux-promise": "^0.5.3",
+    "webpack": "^1.13.2"
   },
   "scripts": {
     "start": "react-scripts start",
