--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "redux": "^3.6.0",
     "redux-form": "^6.0.5",
     "redux-promise": "^0.5.3",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "yelp": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
