--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.14.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-google-maps": "^4.11.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "redux": "^3.6.0",
