--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   },
   "dependencies": {
     "axios": "^0.14.0",
-    "react": "^15.3.1",
+    "material-ui": "^0.15.4",
+    "react": "^15.3.2",
     "react-dom": "^15.3.1",
     "react-google-maps": "^4.11.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.6.0",
     "redux-form": "^6.0.5",
     "redux-promise": "^0.5.3",
