--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^0.14.0",
+    "bootstrap": "^3.3.7",
     "material-ui": "^0.15.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.1",
