--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "dependencies": {
     "axios": "^0.14.0",
     "bootstrap": "^3.3.7",
+    "jquery": "^3.1.1",
     "material-ui": "^0.15.4",
     "react": "^15.3.2",
+    "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.1",
     "react-google-maps": "^4.11.0",
     "react-redux": "^4.4.5",
